Published with https://stackedit.io/

--- a/_posts/2013-10-21-The-days-I-relished-seeking-wisdom.html
+++ b/_posts/2013-10-21-The-days-I-relished-seeking-wisdom.html
@@ -82,3 +82,9 @@ abstractimg: /assets/img/blogimg/welcome.jpg
 <p>I always loved to play here and this is favorite brain sport through out my graduating time.</p>
 
 <h2 id="entrepreneur-ideology">Entrepreneur Ideology</h2>
+
+<p>It is buzz word.. But for me it’s a way of life. Finding the problems and solving them is an entrepreneur’s Nature. The instances of automating things which i do using tech even writing a small formula in excel and finding ways to do things differently. Presenting stuff in innovative ways. Making people think on what i say and most of the times making them act upon it has been part of my life.</p>
+
+<p>Had a B-Plan presented won as second best and One of the Judge has super liked the idea and jumped in for helping to implement a pilot. but it was not succeeded as i was not showing much interest because of my project &amp; Exams &amp; Job seeking pressure in final year.</p>
+
+<h2 id="job-vs-entrepreneur-path">JOB VS Entrepreneur Path</h2>
