Published with https://stackedit.io/

--- a/_posts/2013-10-21-The-days-I-relished-seeking-wisdom.html
+++ b/_posts/2013-10-21-The-days-I-relished-seeking-wisdom.html
@@ -77,7 +77,7 @@ abstractimg: /assets/img/blogimg/welcome.jpg
 
 <p>What is challenging in the Top Tier institutes is to handle Competition which is political in nature. It takes time to understand this situations happening around and respond to it. We should never react to these situations. Just wait for the time and respond to it.</p>
 
-<p>I am happy to say that i had many such experiences while i was in the process of Graduating. I took some stones at me initially but later instances were handled with a lot maturity in that area. </p>
+<p>I am glad that i had many such experiences while i was in the process of Graduating. I took some stones at me initially but later instances were handled with a lot maturity. </p>
 
 <p>I always loved to play here and this is favorite brain sport through out my graduating time.</p>
 
@@ -87,4 +87,12 @@ abstractimg: /assets/img/blogimg/welcome.jpg
 
 <p>Had a B-Plan presented won as second best and One of the Judge has super liked the idea and jumped in for helping to implement a pilot. but it was not succeeded as i was not showing much interest because of my project &amp; Exams &amp; Job seeking pressure in final year.</p>
 
-<h2 id="job-vs-entrepreneur-path">JOB VS Entrepreneur Path</h2>
+<h2 id="job-vs-entrepreneur-path">Job vs Entrepreneur Path</h2>
+
+<p>Finally at mid of final Year i was placed in an MNC in the campus. the package it has offered was low. but i was stuck in dilemma of testing myself as an entrepreneur &amp; to go for regular Job. </p>
+
+<p>In the meanwhile i have started working on my Plan of making website which will promote services which i thought of making is an easy. Finished my graduation and i was sitting home with many plans awaiting for joining from MNC. </p>
+
+<p>There came a call from 2 startups from know network. As i already had a startup bug in my head. just carefully chosen path to understand how entrepreneurship works without burning our hands and let watch how people burn hands or grow the companies. </p>
+
+<p>Here is where i took a path to a lean startup and leaving the MNC offer behind.</p>
