updated the meta to apply template

--- a/_posts/2013-10-21-The-days-I-relished-seeking-wisdom.html
+++ b/_posts/2013-10-21-The-days-I-relished-seeking-wisdom.html
@@ -1,13 +1,11 @@
-<hr>
-
-<pre><code>layout: post
+---
+layout: post
 title:  "The days I relished seeking wisdom"
 date:   2008-10-21 18:19:20 +0530
 categories: RelivingThoseDays 
 comments: true
 abstractimg: /assets/img/blogimg/welcome.jpg
 ---
-</code></pre>
 
 <h1 id="the-days-i-relished-seeking-wisdom">The days I relished seeking wisdom.</h1>
 
