Published with https://stackedit.io/

--- a/_posts/2017-2-10-my-experiments-with-technology.html
+++ b/_posts/2017-2-10-my-experiments-with-technology.html
@@ -1,3 +1,34 @@
 <h1 id="my-first-experiment-with-computers">My First Experiment with Computers. </h1>
 
-<h3 id="excel-powerpoint-professional-usage">Excel &amp; Powerpoint Professional Usage:</h3>
+<h2 id="preparing-a-lab-manual">preparing a Lab Manual </h2>
+
+<h2 id="excel-powerpoint-professional-usage">Excel &amp; Powerpoint Professional Usage:</h2>
+
+<p>using for Chemical Engineering lab.  <br>
+Society Presentations. </p>
+
+<h2 id="my-first-website-experience">My first Website Experience</h2>
+
+<h2 id="my-first-linux-experience">My First linux experience</h2>
+
+<h2 id="my-first-cisco-switch-experience">My First Cisco Switch Experience.</h2>
+
+<h2 id="my-first-webserver-installation">My First webserver installation</h2>
+
+<h2 id="my-first-website-with-wordpress"> My first Website with Wordpress</h2>
+
+<h2 id="how-i-learnt-joomla-website"> How i learnt joomla website </h2>
+
+<h2 id="my-first-remuneration-as-a-web-developer"> My first Remuneration as a Web developer </h2>
+
+<p>1000 rs</p>
+
+<h2 id="my-first-business-plan">My first business plan </h2>
+
+<p>corpulse</p>
+
+<h2 id="my-first-blog">My first blog </h2>
+
+<p>medical blog</p>
+
+<h2 id="my-first-campus-interview-experience">My first Campus interview Experience</h2>
