Published with https://stackedit.io/

--- a/_posts/2017-2-10-my-experiments-with-technology.html
+++ b/_posts/2017-2-10-my-experiments-with-technology.html
@@ -2,6 +2,12 @@
 
 <h2 id="preparing-a-lab-manual">preparing a Lab Manual </h2>
 
+<p>I used IIT-BHU Library Computers which have Ubuntu OS, Which has proxy with username and password to login. and the internet was much faster when compared to hostels.</p>
+<p>Pharmaceutical organic Chemistry-I was practicals in Semester II where we need to find the organic compounds characteristics. it was my good effort with Openoffice which was installed in those computers. it is present in Academia Documents which is trending in visits since it is uploaded.
+</p><h3 id="systematic-qualitative-organic-analysis"><a href="http://www.academia.edu/225453/Systematic_qualitative_organic_analysis">Systematic qualitative organic analysis </a></h3>
+Till end of Semester II i was not having personal PC. i used to majorly depend on Computer Center and IIT-BHU Library computers.
+<p></p>
+
 <h2 id="excel-powerpoint-professional-usage">Excel &amp; Powerpoint Professional Usage:</h2>
 
 <p>using for Chemical Engineering lab.  <br>
