Published with https://stackedit.io/

--- a/_posts/2017-2-10-my-experiments-with-technology.html
+++ b/_posts/2017-2-10-my-experiments-with-technology.html
@@ -10,8 +10,29 @@ Till end of Semester II i was not having personal PC. i used to majorly depend o
 
 <h2 id="excel-powerpoint-professional-usage">Excel &amp; Powerpoint Professional Usage:</h2>
 
-<p>using for Chemical Engineering lab.  <br>
-Society Presentations. </p>
+<p> At the start of Semester III, I have influenced my parents by explaining the need of having personal PC in the premier institutes. how would it help in growing Tech skills with the internet facility available. With this i was blessed with a PC for the first time. </p>
+
+<h3 id="powerpoint-usage">PowerPoint Usage</h3>
+
+<p>During Sem III, Pharmaceutical Society, Was just starting up around 2009. the place where we have to take department events professionally. We learnt very formal way of doing things on this arena.</p>
+
+<p>I have prepared a Power Point Presentation V1 which has depicted the history of department, Pharmaceutical society etc., and passed it on to my senior who was guiding me through this.</p>
+
+<p>Later Presentations went to classroom talks, Scientfic fests, all kinds of Events till date in professional world.</p>
+
+<p> The most advanced PPT with all sorts of features of PPT was made for a Quiz Competition Genus MINDZ framed by me with two of my seniors (<a href="https://www.facebook.com/khosla.sarvesh">Sarvesh</a> and <a href="https://www.facebook.com/gopalopsharma">Gopal</a>) and With all my batchmates(Especially <a href="https://www.facebook.com/abhash.chauhan">Abash</a> who gave very good content, ideas and questions).</p>
+
+<h3 id="powerpoint-usage-1">PowerPoint Usage</h3>
+
+<p> While my Powerpoint presentation skills and Oratory skills are getting improved day by day. During Sem IV, there is Lab of Chemical Engineering with 25-30 experiments related to Fluid Dynamics, Laminar flow, turbulant flow, Laminar Flow, Refractive Index of fluids etc. All of them were in Chemical Engineering lab just opposite to the department.</p>
+
+<p>Every experiment has min 30 to max 75 readings recorded for period of 1.5 to 2 hrs needs to be calculated to final results which has complex formulas are involved. i was hating to calculate the readings manually for all these reading using scientific calculator for  every reading.</p>
+
+<p>Here i thought of using Excel sheets which is like writing the formulae and just dragging for all other readings. Once i have implemented it floated for next 3 years to all my juniors and classmates.</p>
+
+<p>Here is the sample video (not taken in lab but just for FYI) determining Reynolds Number using laminar flow.</p>
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/Kq9UKD0iZ2Q" allowfullscreen=""></iframe>
 
 <h2 id="my-first-website-experience">My first Website Experience</h2>
 
@@ -38,8 +59,6 @@ Society Presentations. </p>
 <p>medical blog</p>
 
 <h2 id="my-first-campus-interview-experience">My first Campus interview Experience</h2>
-
-<h2 id="my-first-webserver">My first Webserver </h2>
 
 <h2 id="my-first-hosting-business">My first hosting business </h2>
 
