Published with https://stackedit.io/

--- a/_posts/2017-2-10-my-experiments-with-technology.html
+++ b/_posts/2017-2-10-my-experiments-with-technology.html
@@ -10,7 +10,7 @@ Till end of Semester II i was not having personal PC. i used to majorly depend o
 
 <h2 id="excel-powerpoint-professional-usage">Excel &amp; Powerpoint Professional Usage:</h2>
 
-<p> At the start of Semester III, I have influenced my parents by explaining the need of having personal PC in the premier institutes. how would it help in growing Tech skills with the internet facility available. With this i was blessed with a PC for the first time. </p>
+<p> At the start of Semester III, I have influenced my parents by explaining the need of having personal PC in the premier institutes. how would it help in growing Tech skills with the internet facility available. With this i was blessed with a PC Compaq Presario CQ40 327 TU 2 GB Ram Intel Core2Duo. for the first time. </p>
 
 <h3 id="powerpoint-usage">PowerPoint Usage</h3>
 
@@ -22,7 +22,7 @@ Till end of Semester II i was not having personal PC. i used to majorly depend o
 
 <p> The most advanced PPT with all sorts of features of PPT was made for a Quiz Competition Genus MINDZ framed by me with two of my seniors (<a href="https://www.facebook.com/khosla.sarvesh">Sarvesh</a> and <a href="https://www.facebook.com/gopalopsharma">Gopal</a>) and With all my batchmates(Especially <a href="https://www.facebook.com/abhash.chauhan">Abash</a> who gave very good content, ideas and questions).</p>
 
-<h3 id="powerpoint-usage-1">PowerPoint Usage</h3>
+<h3 id="excel-proficiency-usage">Excel  Proficiency Usage</h3>
 
 <p> While my Powerpoint presentation skills and Oratory skills are getting improved day by day. During Sem IV, there is Lab of Chemical Engineering with 25-30 experiments related to Fluid Dynamics, Laminar flow, turbulant flow, Laminar Flow, Refractive Index of fluids etc. All of them were in Chemical Engineering lab just opposite to the department.</p>
 
@@ -34,9 +34,21 @@ Till end of Semester II i was not having personal PC. i used to majorly depend o
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/Kq9UKD0iZ2Q" allowfullscreen=""></iframe>
 
+<h2 id="my-first-linux-experience">My First linux experience</h2>
+
+<p>I installed Ubuntu for the first time in  Sem III 2009 version 9.10, I installed it in parallel to Windows Vista. My first experience with ubuntu was frustrating as i was not able to install anything in it. even though i was using right commands and reverted back. But i Went back to it again in Sem VII 10.4 knowing that i need to configure my proxy credentials in /etc/apt.conf to install anything. The strong Push Behind the act is because of <a href="https://www.facebook.com/nsrajput">Dr. N S Rajput Currently Professor in Dept. of Electronics IIT-BHU, Varanasi. </a></p>
+
+<p>After Sem VII I never looked back, i mastered Linux OS any variant with 8 months from there. I should thank my senior <a href="https://www.facebook.com/pankajdnapster">Mr. Pankaj Yadav , The Realtime Hacker of Technology and IT Hardware</a> for his hand holding nature when introduced tech into me. it started with automated way of framing SQL insert commands into a MYSQL Database using simple excel sheet</p>
+
 <h2 id="my-first-website-experience">My first Website Experience</h2>
 
-<h2 id="my-first-linux-experience">My First linux experience</h2>
+<p> it was Spirit 2011 website, My first html experience, i learnt basic html overnight and started Editing content inside the html using microsoft web expression and FileZilla FTP client to upload these html to college Website.</p>
+
+<p>The Spirit 2011 Album is here.  <br>
+<a href="http://www.iitbhu.ac.in/phe/album_spirit-2011.html">http://www.iitbhu.ac.in/phe/album_spirit-2011.html</a></p>
+
+<p>The Latest Version of Spirit website is here.  <br>
+<a href="http://www.spiritiitbhu.com/">http://www.spiritiitbhu.com/</a></p>
 
 <h2 id="my-first-cisco-switch-experience">My First Cisco Switch Experience.</h2>
 
