updated the header

--- a/_posts/2017-2-10-my-experiments-with-technology.html
+++ b/_posts/2017-2-10-my-experiments-with-technology.html
@@ -1,3 +1,12 @@
+---
+layout: post
+title:  "My Baby steps with Technology "
+date:   2017-02-10 18:19:20 +0530
+categories: RelivingThoseDays 
+comments: true
+abstractimg: /assets/img/blogimg/welcome.jpg
+---
+
 <h1 id="my-first-experiment-with-computers">My First Experiment with Computers. </h1>
 
 <h2 id="preparing-a-lab-manual">preparing a Lab Manual </h2>
@@ -50,7 +59,7 @@ Till end of Semester II i was not having personal PC. i used to majorly depend o
 <p>The Latest Version of Spirit website is here.  <br>
 <a href="http://www.spiritiitbhu.com/">http://www.spiritiitbhu.com/</a></p>
 
-<h2 id="my-first-cisco-switch-experience">My First Cisco Switch Experience.</h2>
+<!--h2 id="my-first-cisco-switch-experience">My First Cisco Switch Experience.</h2>
 
 <h2 id="my-first-webserver-installation">My First webserver installation</h2>
 
@@ -74,4 +83,4 @@ Till end of Semester II i was not having personal PC. i used to majorly depend o
 
 <h2 id="my-first-hosting-business">My first hosting business </h2>
 
-<h2 id="my-first-freelancing-work">my first freelancing work </h2>
+<h2 id="my-first-freelancing-work">my first freelancing work </h2-->
