--- a/_posts/2017-2-10-my-experiments-with-technology.html
+++ b/_posts/2017-2-10-my-experiments-with-technology.html
@@ -2,7 +2,7 @@
 layout: post
 title:  "My Baby steps with Technology "
 date:   2017-02-10 18:19:20 +0530
-categories: RelivingThoseDays 
+categories: Baby Steps in Technology
 comments: true
 abstractimg: /assets/img/blogimg/welcome.jpg
 ---
