--- a/_posts/2013-10-21-The-days-I-relished-seeking-wisdom.html
+++ b/_posts/2013-10-21-The-days-I-relished-seeking-wisdom.html
@@ -87,10 +87,10 @@ abstractimg: /assets/img/blogimg/welcome.jpg
 
 <h2 id="job-vs-entrepreneur-path">Job vs Entrepreneur Path</h2>
 
-<p>Finally at mid of final Year i was placed in an MNC in the campus. the package it has offered was low. but i was stuck in dilemma of testing myself as an entrepreneur &amp; to go for regular Job. </p>
+<p>Finally at mid of final Year i was placed in an MNC in the campus. the package it has offered was low. but i was stuck in dilemma of testing myself as an entrepreneur or to go for regular Job. </p>
 
 <p>In the meanwhile i have started working on my Plan of making website which will promote services which i thought of making is an easy. Finished my graduation and i was sitting home with many plans awaiting for joining from MNC. </p>
 
-<p>There came a call from 2 startups from know network. As i already had a startup bug in my head. just carefully chosen path to understand how entrepreneurship works without burning our hands and let watch how people burn hands or grow the companies. </p>
+<p>There came a call from 2 startups from known network. As i already had a startup bug in my head. just carefully chosen path to understand how entrepreneurship works without burning our hands and let watch how people burn hands or grow the companies. </p>
 
 <p>Here is where i took a path to a lean startup and leaving the MNC offer behind.</p>
