js blog started

--- a/_posts/2018-12-10-intro-to-Javascript.html
+++ b/_posts/2018-12-10-intro-to-Javascript.html
@@ -2,17 +2,18 @@
 layout: post
 title:  "Intro to Javascript"
 date:   2017-02-10 18:19:20 +0530
-categories: learnJavascript,Basics
+categories: learnJavascriptBasicsFirst
 comments: true
 abstractimg: /assets/img/blogimg/JavaScript.png
 ---
-<h2>Introduction to Javascript(My Understanding from different reads)</h2>
+<h2>Introduction to Javascript</h2>
+<h6>(My Understanding from different reads)</h6>
 
 <h3>Types</h3>
 
 It all starts with Data Types and following are them to start with.
 
-Declarations:
+<h5>Declarations:</h5>
 <pre>
     var a;          // Declaration
     a = 0;          // a has a value.
