added objects & Arrays

--- a/_posts/2018-12-10-intro-to-Javascript.html
+++ b/_posts/2018-12-10-intro-to-Javascript.html
@@ -31,8 +31,41 @@ It all starts with Data Types and following are them to start with.
 
 <h4>Objects & Arrays</h4>
 
-Hmmm.... Objects and Arrays integral part of each and every programming language.
+Hmm.... Objects and Arrays integral part of each and every programming language.
 
+<h5>Object:</h5>
+<p>An object is a collection of name/value pairs, or a string to value map</p>
+
+<h5>Array:</h5>
+<p>
+    Array is a numerically indexed lists of values
+</p>
+
+<pre>
+
+    //OBJECTS
+
+    var book = {
+        title : "JS",
+        taf : true
+    };
+
+    //Access
+
+    book.title              // Access with  .  or [ ]
+    book["taf"]
+    book.name = "JSBOOK";   // Add properties
+    book.contents = {} ;    // empty object
+
+    //ARRAYS
+
+
+</pre>
 
 <h4>Expressions & Operators</h4>
+
+
+<h4>Statements</h4>
+
+<h4>Functions</h4>
 
