added objects & Arrays

--- a/_posts/2018-12-10-intro-to-Javascript.html
+++ b/_posts/2018-12-10-intro-to-Javascript.html
@@ -57,15 +57,45 @@ Hmm.... Objects and Arrays integral part of each and every programming language.
     book.name = "JSBOOK";   // Add properties
     book.contents = {} ;    // empty object
 
-    //ARRAYS
+    //ARRAYS can be accessed only with indexes in square brackets.
+
+    var primes = [2,3,4,5]
+    primes[0]
+    primes.length
+    primes[primes.length - 1]
+
+</pre>
+
+<h5>Arrays and Objects can hold other objects and arrays</h5>
+<pre>
+    var coordinates = [
+        {x:0,y:0},
+        {x:1,y:1}
+    ];
+
+    var data = {
+        d1: [[1,2],[3,4]],
+        d2: [[2,3],[4,5]]
+    };
 
 
 </pre>
 
 <h4>Expressions & Operators</h4>
 
+<h5>Initializer Expression</h5>
+Syntax for listing array elements within Square braces or mapping Object Property names to property values inside curly braces.
+
+<h5>Expression:</h5>
+computes a value, but doesnot do anything, doesnot change the state of program in anyway.
+
+
 
 <h4>Statements</h4>
+
+<h5>Statement:</h5>
+Do not have a value but they alter the state of program.
+
 
 <h4>Functions</h4>
 
