added lexical structure

--- a/_posts/2018-12-10-intro-to-Javascript.html
+++ b/_posts/2018-12-10-intro-to-Javascript.html
@@ -99,3 +99,16 @@ Do not have a value but they alter the state of program.
 
 <h4>Functions</h4>
 
+A function is a named and parametrized block of JavaScript code that you define once, and can then invoke over and over again.
+When we combine functions with objects, we get methods:
+
+
+Client-side JavaScript does not exhibit the nonlinear cross-reference problem nearly to the extent that the core language does, and it is possible to learn how to use JavaScript in web browsers in a fairly linear sequence.
+
+
+﻿There are two exceptions to the general rule that JavaScript interprets line breaks as
+semicolons when it cannot parse the second line as a continuation of the statement on
+the first line.
+
+The first exception involves the return, break, and continue statements
+﻿The second exception involves the ++ and −− operators
